--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,12 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item"><a class="nav-link" href="/movies/">Browse</a></li>
         {% if user.is_authenticated %}
-        <li class="nav-item"><a class="nav-link" href="/recs/">My Recommendations</a></li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'recs:watchlist' %}">
+              My Watchlist{% if movies_in_watchlist_count %} <span class="badge rounded-pill bg-secondary ms-1">{{ movies_in_watchlist_count }}</span>{% endif %}
+            </a>
+          </li>
+          <li class="nav-item"><a class="nav-link" href="{% url 'recs:list' %}">My Recommendations</a></li>
         {% endif %}
       </ul>
       <ul class="navbar-nav">
